--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@ limitations under the License.
 <html>
 
 <head>
-    <title>Hello, world</title>
+    <title>Deployment Sucessful APP01!</title>
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js"></script>
 </head>
 
 <body>
-    <h1>Hello, world</h1>
+    <h1>Deployment Sucessful APP01!</h1>
 
     <button onclick="fetchMessage()">Fetch Message</button>
     <p id="message">Click on the button to fetch the message.</p>
